--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "autoprefixer": "^10.4.12",
+    "node-sass": "^7.0.3",
     "postcss": "^8.4.18",
+    "sass": "^1.56.0",
+    "sass-loader": "^10.3.1",
     "tailwindcss": "^3.1.8"
   },
   "browserslist": [
